# modules

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  README.md
ActiveContour/: CMakeLists.txt
ActiveContour/doc/: README
ActiveContour/resource/: 32-Active-contour-segmentation.hrp.in  83_active_contour.hrp.in  83_output.png.ref  active_contour.xml.in
ActiveContour/src/: activecontour.cpp  activecontour.h  activecontour_main.cpp  activecontour_main.h  arraynd.h  arrayndfloat.cpp  arrayndfloat.h  binaryregion.cpp  binaryregion.h  couple.h  cvmat2array.cpp  cvmat2array.h  deformablemodel.h  triplet.h
BinarizeWolfJolion/: CMakeLists.txt
BinarizeWolfJolion/doc/: README
BinarizeWolfJolion/resource/: 30-Binarize-Wolf-Jolion.hrp  70_binarize_wolf_jolion.hrp.in  70_output.png.ref  binarize_wolf_jolion.xml.in
BinarizeWolfJolion/src/: binarizewolfjolion.cpp  binarizewolfjolion.h
BodyPartsSegmentation/: CMakeLists.txt
BodyPartsSegmentation/doc/: README
BodyPartsSegmentation/resource/: 33-Body-parts-segmentation.hrp.in  77_body_parts_segmentation.hrp.in  77_output.png.ref  body_parts_segmentation.xml.in  forest_param.txt
BodyPartsSegmentation/src/: Histogram.h  RandomForest.cpp  RandomForest.h  bodypartsegmentation.cpp  bodypartsegmentation.h  support_class.cpp  support_class.h
CMake_common/: common_settings.cmake
PixeltrackSD/: CMakeLists.txt
PixeltrackSD/doc/: README  run_babenko.sh  run_nonrigid.sh
PixeltrackSD/example/: pixeltrack.cpp
PixeltrackSD/resource/: 31-Pixel-track-SD.hrp.in  82_output.mpeg.ref.u1404-64  82_output.mpeg.ref.w7  (+3 more)
(+60 files in other folders)
